static/k8s/visit.service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-visit
spec:
  type: NodePort
  selector:
    app: pod-visit
  ports:
    - name: http
      port: 80
      targetPort: 80
